@@ -52,6 +52,8 @@ they occurred between. For more detailed information see the
 @item 3 New Window-Animators: cross, elliptical and draft [Christopher Bratusek]
 
 @item Shrinking/Yanking Support [Timo Korvola]
+
+@item Infinite Desktop Feature [David T. McWherter]
 @end itemize
 
 @item Other changes:
