@@ -12,6 +12,8 @@
 
 	* configure.in: bump minimum intltool version to 0.40.0
 
+	* lisp/sawfish/wm/ext/infinite-desktop.jl : Added [David T. McWherter]
+
 2009-02-04  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/keymaps.jl: remove tab-keymap, add grouping to Button2-Off on titlebar
 
